--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: minima
-title: Coding Blog
+theme: hacker
+title: Coding Blog 
 author: ezekielmiles
 description: No Zero Days / 6-Month SWE Journey
